--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 OpenFace
+ckpt
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm+all,visualstudiocode,windows,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm+all,visualstudiocode,windows,macos
