경로 수정 및 gitignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 OpenFace
+pocketsphinx
 ckpt
+results
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,pycharm+all,visualstudiocode,windows,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,pycharm+all,visualstudiocode,windows,macos
